--- a/NOC-app/package.json
+++ b/NOC-app/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "cron": "^3.1.7"
+    "cron": "^3.1.7",
+    "env-var": "^7.5.0"
   }
 }
