--- a/NOC-app/package.json
+++ b/NOC-app/package.json
@@ -13,12 +13,14 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.6",
+    "@types/nodemailer": "^6.4.17",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "cron": "^3.1.7",
-    "env-var": "^7.5.0"
+    "env-var": "^7.5.0",
+    "nodemailer": "^6.9.16"
   }
 }
